{{$NEXT}}

1.98    2016-04-18

- This release is based on version 2016d of the Olson database. This release
  includes contemporary changes for Russia and Venezuela.


1.97    2016-03-23

- This release is based on version 2016c of the Olson database. This release
  includes contemporary changes for Azerbaijan and Chile.


1.96    2016-03-15

- This release is based on version 2016b of the Olson database. This release
  includes contemporary changes for Russia, Haiti, and Palestine.


1.95    2016-01-27

- This release is based on version 2016a of the Olson database. This release
  includes contemporary changes for the Cayman Islands, Iran, and Chita,
  Russia.


1.94    2015-10-21

- This release is based on version 2015g of the Olson database. This release
  includes contemporary changes for Turkey, Norfolk, Fiji, and Fort Nelson.


1.93    2015-08-11

- This release is based on version 2015f of the Olson database. This release
  includes contemporary changes for Moldova, North Korea, and Uruguay.


1.92    2015-06-22

- This distro now depends on DateTime::TimeZone::Local::Win32 when it is being
  installed on a Windows OS. This should lead to a better experience for
  Windows users. Requested by Matthew Horsfall and Karen Etheridge. RT
  #103275.


1.91    2015-06-13

- This release is based on version 2015e of the Olson database. This release
  includes contemporary changes for Morocco and Cayman Islands.


1.90    2015-05-14

- Made the compilation test shipped in the last release an author-only test,
  as many of the modules in this distribution try to load DateTime, but
  DateTime depends on this distribution. This caused attempts to install
  DateTime on a fresh perl install to fail. Reported by Noel Maddy. RT
  #104448.


1.89    2015-05-14

- Fix a syntax error in the Android local time zone module. Reported by Gregor
  Hermann. RT #104105.


1.88    2015-04-24

- This release is based on version 2015d of the Olson database. This release